add icon for app

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">ComicsApp</string>
+    <string name="tittle_start">Truyen tranh Nham Nhi</string>
 </resources>
