--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">ComicsApp</string>
-    <string name="tittle_start">Truyen tranh Nham Nhi</string>
+    <string name="tittle_start">Truyện Tranh Nhảm Nhí</string>
 </resources>
