--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ComicsApp</string>
+    <string name="app_name">Truyện Tranh Nhảm Nhí</string>
     <string name="tittle_start">Truyện Tranh Nhảm Nhí</string>
 
     <!-- TODO: Remove or change this placeholder text -->
